--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/analytics": "^21.6.0",
     "@react-native-firebase/app": "^21.6.0",
+    "@react-native-firebase/auth": "^21.6.0",
+    "@react-native-firebase/storage": "^21.6.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.4",
@@ -25,6 +28,7 @@
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.3",
     "expo-splash-screen": "~0.29.7",
@@ -37,7 +41,9 @@
     "react-native": "0.76.1",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
