--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/app": "^21.6.0",
     "@react-native-firebase/auth": "^21.6.0",
     "@react-native-firebase/storage": "^21.6.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.4",
