--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.76.1",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-crop-picker": "^0.41.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
